# TTRPG-GM

./: README.md
app/: alembic.ini  docker-compose.yml  pyproject.toml
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 0f9cbd8e122f_changed_added_2_tables_for_rag.py  1568b6095050_changed_added_2_tables_for_rag.py  20228e2a8502_changed_added_2_tables_for_rag.py  3b6133d7f20e_changed_id.py  408898411380_create_user_table.py  44706bcbb42f_create_user_table.py  56c6b8235ded_changed_added_2_tables_for_rag.py  a613596cd506_changed_added_2_tables_for_rag.py  c2140b967633_changed_added_more_tables_related_to_.py  d49006f3c0bc_changed_added_2_tables_for_rag.py  db830d0d2247_changed_added_more_tables_related_to_.py  ed9cb92dede0_added_column.py  f5d1cd54d7ab_create_user_table.py
app/src/app/: config.py  main.py
app/src/app/controllers/: campaign.py  campaing.py  chat.py  sessions.py  turn.py  user.py
app/src/app/db/: db.py
app/src/app/middleware/: auth.py
app/src/app/routers/: routes.py
app/src/app/scripts/: ingest.py  testLlm.py
app/src/app/services/: gm.py  rag.py
app/src/app/utils/: constants.py  dice.py  helpers.py
web/: package-lock.json  package.json  tailwind.config.ts
web/src/lib/: auth.ts
web/src/routes/campaigns/[id]/: +page.svelte
web/src/routes/campaigns/[id]/character/: +page.svelte
web/src/routes/campaigns/[id]/session/[session_id]/: +page.svelte
web/src/routes/campaigns/new/: +page.svelte
web/src/routes/chat/: +page.svelte
web/src/routes/dashboard/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/register/: +page.svelte
web/src/routes/rulebook/: +page.svelte
web/src/routes/unauthorized/: +page.svelte
