[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Luqmaan Hakeem",email = "rockgameplayhakeem@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
